49-reduce-metrics-series/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: prometheus2.kub
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-2
            port:
              number: 9090
